added voice note

--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
       <button class="close-btn" id="closeModal">×</button>
       <h2 id="modal-date"></h2>
       <p id="modal-text"></p>
-      <img id="modal-image" alt="" />
+      <img id="modal-image" />
+
+      <!-- AUDIO -->
+      <div id="modal-audio" class="audio-wrapper hidden">
+        <button id="play-audio-btn">▶ PLAY VOICE NOTE</button>
+        <audio id="voice-audio">
+          <source id="voice-source" src="" type="audio/mpeg">
+        </audio>
+      </div>
     </div>
   </div>
 
